--- a/AULA 10 - FUNÇÕES/hcca_Function_03.ipynb
+++ b/AULA 10 - FUNÇÕES/hcca_Function_03.ipynb
@@ -96,38 +96,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "NrwT2QgFW683",
     "outputId": "072bbfa6-2524-48b7-bdb3-9edbb16ef108"
    },
+   "outputs": [],
+   "source": [
+    "\n",
+    "produtos = ['beb46275','TFA23962','TFA64715','TFA69555','TFA56743','BSA45510','TFA44968','CAR75448','CAR23596','CAR13490','BEB21365','BEB31623','BSA62419','BEB73344','TFA20079','BEB80694','BSA11769','BEB19495','TFA14792','TFA78043','BSA33484','BEB97471','BEB62362','TFA27311','TFA17715','BEB85146','BEB48898','BEB79496','CAR38417','TFA19947','TFA58799','CAR94811','BSA59251','BEB15385','BEB24213','BEB56262','BSA96915','CAR53454','BEB75073']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enviar beb46275 para setor de bebidas alcóolicas\n",
-      "Enviar BEB21365 para setor de bebidas alcóolicas\n",
-      "Enviar BEB31623 para setor de bebidas alcóolicas\n",
-      "Enviar BEB73344 para setor de bebidas alcóolicas\n",
-      "Enviar BEB80694 para setor de bebidas alcóolicas\n",
-      "Enviar BEB19495 para setor de bebidas alcóolicas\n",
-      "Enviar BEB97471 para setor de bebidas alcóolicas\n",
-      "Enviar BEB62362 para setor de bebidas alcóolicas\n",
-      "Enviar BEB85146 para setor de bebidas alcóolicas\n",
-      "Enviar BEB48898 para setor de bebidas alcóolicas\n",
-      "Enviar BEB79496 para setor de bebidas alcóolicas\n",
-      "Enviar BEB15385 para setor de bebidas alcóolicas\n",
-      "Enviar BEB24213 para setor de bebidas alcóolicas\n",
-      "Enviar BEB56262 para setor de bebidas alcóolicas\n",
-      "Enviar BEB75073 para setor de bebidas alcóolicas\n"
+      "['beb46275', 'TFA23962', 'TFA64715', 'TFA69555', 'TFA56743', 'BSA45510', 'TFA44968', 'CAR75448', 'CAR23596', 'CAR13490', 'BEB21365', 'BEB31623', 'BSA62419', 'BEB73344', 'TFA20079', 'BEB80694', 'BSA11769', 'BEB19495', 'TFA14792', 'TFA78043', 'BSA33484', 'BEB97471', 'BEB62362', 'TFA27311', 'TFA17715', 'BEB85146', 'BEB48898', 'BEB79496', 'CAR38417', 'TFA19947', 'TFA58799', 'CAR94811', 'BSA59251', 'BEB15385', 'BEB24213', 'BEB56262', 'BSA96915', 'CAR53454', 'BEB75073']\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "produtos = ['beb46275','TFA23962','TFA64715','TFA69555','TFA56743','BSA45510','TFA44968','CAR75448','CAR23596','CAR13490','BEB21365','BEB31623','BSA62419','BEB73344','TFA20079','BEB80694','BSA11769','BEB19495','TFA14792','TFA78043','BSA33484','BEB97471','BEB62362','TFA27311','TFA17715','BEB85146','BEB48898','BEB79496','CAR38417','TFA19947','TFA58799','CAR94811','BSA59251','BEB15385','BEB24213','BEB56262','BSA96915','CAR53454','BEB75073']\n"
+    "print(produtos)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
