--- a/AULA 10 - FUNÇÕES/hcca_Function_08.ipynb
+++ b/AULA 10 - FUNÇÕES/hcca_Function_08.ipynb
@@ -68,20 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "jtnHqgJkTdjT"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.17, 1.54, 1.45, 1.94, 2.37, 2.3, 1.79, 1.8, 2.25, 1.37]\n",
-      "[2.25, 1.37]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#exemplo mais simples para facilitar a visualização\n",
     "precos_imoveis = [2.17,1.54,1.45,1.94,2.37,2.3,1.79,1.8,2.25,1.37]\n",
@@ -89,16 +80,12 @@
     "\n",
     "# Vamos definir qual o fator que vamos dividir as listas (ou seja, quantos % da lista vai ficar pra teste. O resto fica pra treino)\n",
     "#Vamos usar 0.1 (10%)\n",
-    "fator = 0.2\n",
+    "\n",
     "\n",
     "#Isso significa que a lista de teste tem quantos itens?\n",
-    "i = int((1-fator) * len(precos_imoveis))\n",
     "\n",
-    "#Agora vamos entender qual conta temos que fazer para dividir a lista em 2 listas. Uma com 90% dos valores e outra com 10%\n",
-    "precos_treino = precos_imoveis[:i]\n",
-    "precos_teste = precos_imoveis[i:]\n",
-    "print(precos_imoveis)\n",
-    "print(precos_teste)"
+    "\n",
+    "#Agora vamos entender qual conta temos que fazer para dividir a lista em 2 listas. Uma com 90% dos valores e outra com 10%\n"
    ]
   },
   {
