--- a/AULA 10 - FUNÇÕES/hcca_Function_04.ipynb
+++ b/AULA 10 - FUNÇÕES/hcca_Function_04.ipynb
@@ -31,16 +31,37 @@
     "id": "o_9wJsm7Ln6h"
    },
    "source": [
-    "- Vamos mudar a função que fizemos na aula passada para conseguir categorizar qualquer tipo de bebida de acordo com o \"rótulo\" passado para a nsosa function. Basicamente nossa function agora tem que verificar se o produto é da categoria passada ou não."
+    "- Vamos mudar a função que fizemos na aula passada para conseguir categorizar qualquer tipo de bebida de acordo com o \"rótulo\" passado para a nossa function. Basicamente nossa function agora tem que verificar se o produto é da categoria passada ou não."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "Lv1bl5lULn6h"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enviar o produto de código BEB21365 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB31623 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB73344 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB80694 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB19495 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB97471 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB62362 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB85146 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB48898 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB79496 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB15385 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB24213 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB56262 para setor de bebidas alcóolicas\n",
+      "Enviar o produto de código BEB75073 para setor de bebidas alcóolicas\n"
+     ]
+    }
+   ],
    "source": [
     "def ehalcoolico(bebida):\n",
     "    bebida = bebida.upper()\n",
@@ -52,7 +73,7 @@
     "\n",
     "for produto in produtos:\n",
     "    if ehalcoolico(produto):\n",
-    "        print('Enviar {} para setor de bebidas alcóolicas'.format(produto))\n"
+    "        print('Enviar o produto de código {} para setor de bebidas alcóolicas'.format(produto))\n"
    ]
   },
   {
@@ -98,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
